// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> should render BasicDialog when no message given 1`] = `
<Modal>
  <Backdrop
    color="#000"
    duration={200}
    isVisible={true}
    level={0}
    onClick={[Function]}
    opacity={50}
  />
  <BasicDialog
    actions={Array []}
    title={null}
  />
</Modal>
`;

exports[`<Dialog /> should render a special dialog 1`] = `
<Modal>
  <Backdrop
    color="#000"
    duration={200}
    isVisible={true}
    level={0}
    onClick={[Function]}
    opacity={50}
  />
  <PipelineErrorDialog
    actions={Array []}
    message=""
    params={
      Object {
        "errorCode": "",
        "message": "",
        "pipelineName": "",
        "request": Object {},
      }
    }
  />
</Modal>
`;

exports[`<Dialog /> should render variant select dialog 1`] = `
<Modal>
  <Backdrop
    color="#000"
    duration={200}
    isVisible={true}
    level={0}
    onClick={[Function]}
    opacity={50}
  />
  <VariantSelectModal
    actions={Array []}
    message="Test"
    params={
      Object {
        "productId": "product_1",
      }
    }
    title={null}
  />
</Modal>
`;

exports[`<Dialog /> should render without props 1`] = `
<Modal>
  <Backdrop
    color="#000"
    duration={200}
    isVisible={true}
    level={0}
    onClick={[Function]}
    opacity={50}
  />
  <TextMessageDialog
    actions={Array []}
    message="msg"
    title={null}
  />
</Modal>
`;
